fixed spacing issues on mobile

--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ html, body {
 
 @media (max-width: 600px) {
   .wrapper {
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
 
@@ -168,6 +169,12 @@ header {
   margin: auto;
   padding-top: 3em;
   padding-bottom: 2em;
+}
+
+@media (min-width: 600px) {
+  header {
+    padding-left: 2em;
+  }
 }
 
 @media (max-width: 600px) {
